# PointCloudProcess

./: CMakeLists.txt  README.md
fusion/: CMakeLists.txt  optimized_data.cpp  pseudo_optimized.cpp  testing_datasets.cpp  training_datasets.cpp
include/: bin2pcd.h  lidar_in_camera_range.h  optimized_data.h  pc_vis.h  pcd2bin.h  pseudo_optimized.h  testing_datasets.h  training_datasets.h
preprocess/: CMakeLists.txt  bin2pcd.cpp  lidar_in_camera_range.cpp  pcd2bin.cpp
src/: demo.cpp  main.cpp
visualization/: CMakeLists.txt  pc_vis.cpp
